# prtimes-hackathon-be-podcast

./: .gitignore  Dockerfile  README.md  compose.yml  note.txt  pyproject.toml
article_to_podcast/: firebase_utils.py  main.py  models.py  openai_utils.py
